web/app/themes/ppj/src/sass/components/header.sass
.underlined-link
  &:after
    border-bottom-color: $color-main
    border-bottom-style: solid
    border-bottom-width: .3rem
    bottom: -.4rem
    content: ''
    display: block
    height: 0
    opacity: 0
    position: relative
    transition: $main-transition-duration

.header
  background-color: $color-quite-dark
  border-bottom: .4rem solid $color-very-light
  box-sizing: content-box
  z-index: 3

  @include bp('portrait')
    border-bottom-width: .6rem

  @include bp('landscape')
    border-bottom-width: .8rem

  @include bp('large')
    border-bottom-width: 1rem

  .home &
    @include bp('portrait')

  &__hero
    height: 100%
    position: relative

  &__overlay
    display: flex
    flex-direction: column
    height: 100%
    justify-content: flex-end
    position: absolute
    top: 0
    width: 100%

  &__nav
    box-sizing: border-box
    z-index: 1

  &__site-wide-nav
    background: $color-dark

    @include bp('landscape')
      border-bottom: .2rem solid $color-white

    &-menu

      &-list
        display: flex
        margin: 0 auto
        max-width: 128rem

        @include bp('landscape')
          padding: 0 $common-spacing * 2

        &-element
          $list-element: &
          display: none
          width: 100%

          @include bp('landscape')
            display: block
            flex-grow: 1
            width: initial

          &-link
            display: block
            padding: $common-spacing $common-spacing / 2
            text-align: center

            @include bp('landscape')
              padding: $common-spacing

          &-text
            color: $color-light
            font-weight: $font-weight-bold
            font-size: 1.6rem
            text-transform: uppercase
            transition: color $main-transition-duration


            @include bp('large')
              font-size: 1.8rem

            &:hover
              color: $color-white

          &--selected
            align-items: center
            background-color: $color-main
            display: flex
            justify-content: flex-end
            padding: 0 $common-spacing

            @include bp('landscape')
              display: block
              padding: 0 $common-spacing / 2

            #{$list-element}-text
              color: $color-dark
              font-size: 1.8rem

              @include bp('landscape')
                font-size: 1.6rem

              @include bp('large')
                font-size: 1.8rem

  &__leg-nav
    @extend .l-full
    display: flex
    justify-content: space-between
    margin-bottom: 0
    margin-top: 0
    opacity: 1
    padding: $common-spacing

    @include bp('portrait')
      align-items: center

    .leg &
      left: 0
      position: absolute
      right: 0
      z-index: 3

    .page-template-find-a-job &
      position: relative

    @include bp('landscape')
      margin: 0 auto
      max-width: 128.4rem
      padding: $common-spacing * 2

  &__image
    height: 100%
    opacity: 0
    position: relative
    transition: $main-transition-duration
    width: 100%

    &--loaded
      opacity: 1

  &__img-ratio
    height: 0
    padding-bottom: 24.4rem // for small screens the image should stop scaling vertically

    @include bp('portrait')
      padding-bottom: 38.88%

    .leg-home &
      @include bp('portrait')
        padding-bottom: 43.33%

  &__img-container
    background-color: $color-dark
    background-position: center center
    background-size: cover
    bottom: 0
    left: 0
    position: absolute
    right: 0
    top: 0

    &:before
      background: linear-gradient(to bottom, $color-transparency-dark-start, $color-transparent)
      display: block
      content: ''
      height: 10rem
      position: absolute
      top: 0
      left: 0
      right: 0
      z-index: 2

    &:after
      background: linear-gradient(60deg, $color-transparency-dark-end 10%, $color-transparent 50%)
      display: block
      content: ''
      position: absolute
      top: 0
      bottom: 0
      left: 0
      right: 0

    .slick-slider
      height: 100%
      margin-bottom: 0

    .slick-list
      height: 100%

    .slick-track
      height: 100%

    .slick-slide
      & > div
        height: 100%

        & > img

    .slick-dots
      bottom: 25px
      display: flex
      justify-content: center
      position: absolute
      width: 100%

      & > li
        margin: $common-spacing/2

        &.slick-active > button
          background: $color-light

      button
        $size: 1rem
        border: $size/5 solid $color-light
        border-radius: $size*4
        color: $color-transparent
        display: block
        height: $size
        padding: 0
        width: $size
        transition: all .2s

        &:before
          display: none

  &__nav-link
    background-color: $color-main
    border: solid .2rem $color-white
    border-radius: $common-spacing * 2
    color: $color-white
    cursor: pointer
    font-weight: $font-weight-bold
    height: 3.6rem
    line-height: 2.1rem
    padding: .3em .7em .3em
    pointer-events: auto
    text-align: center
    text-transform: uppercase

    .landing-page &
      background-color: $color-transparent
      border-color: $color-dark
      color: $color-dark

    @include bp('portrait')
      width: 11.3rem

    @include bp('landscape')
      display: none

    & > div
      background: $color-white
      height: .5rem
      margin-top: .4rem
      width: $common-spacing * 1.5

      &:first-child
        margin-top: 0

  &__nav-leg-menu
    background: $color-dark-transparent
    color: $color-white
    display: none

    @include bp('landscape')
      background-color: $color-transparent
      display: block
      margin-left: auto

  &__nav-leg-menu-list
    margin-top: 8rem

    @include bp('landscape')
      display: flex
      margin-top: 0
      padding-bottom: $common-spacing * 2

  &__nav-leg-menu-list-element
    $nmle: &
    font-size: 1.8rem
    font-weight: $font-weight-bold
    padding: 0 $common-spacing

    &--selected

      #{$nmle}-text:after
        opacity: 1

      &:after
        @include bp('landscape')
          border-bottom-color: $color-light

    &:hover
      #{$nmle}-text:after
        opacity: 1

    @include bp('landscape')
      border: none
      border-left: .1rem solid $color-light
      font-size: 1.6rem
      height: 2rem
      line-height: 1
      margin-left: $common-spacing
      padding: 0

    @include bp('large')
      font-size: 2rem

    &-text
      @extend .underlined-link
      display: inline-block
      text-align: center

    & > a
      border-bottom: 1px solid $color-white
      color: $color-white
      display: block
      padding: $common-spacing/1.5 0
      width: 100%

      @include bp('landscape')
        border: none
        margin-left: $common-spacing
        padding: 0
        padding-bottom: $common-spacing * .4
        text-transform: uppercase
        width: inherit

        &:after
          transition: border-bottom-color $main-transition-duration

      &[href='']
        color: $color-light
        pointer-events: none
        cursor: default

    &:first-child

      @include bp('landscape')
        border-left: 0

      & > a
        border-top: 1px solid $color-white

        @include bp('landscape')
          border-top: 0

    &-subtext
      font-weight: $font-weight-normal

  &__logo
    @extend .u-wireframe-image
    @include background-img('svg/logo.svg')
    background-color: $color-transparent
    background-repeat: no-repeat
    background-position: center center
    background-size: contain
    display: block
    height: 4rem // 2.35 ratio
    width: 9.4rem
    pointer-events: auto

    .youth-custody &
      @include background-img('ycs_white_small.png')

    @include bp('portrait')
      height: 6.4rem
      width: 15rem

  &__text-container
    margin: $common-spacing

    @include bp('landscape')
      max-width: 128.4rem
      margin: $common-spacing * 2 auto $common-spacing * 4
      padding: 0 $common-spacing * 2

    @include bp('large')
      position: relative

  &__text
    @include u-top-border('large', 'color-main')
    color: $color-white
    font-size: 2.6rem
    line-height: 3rem

    &, & > p
      font-weight: $font-weight-bold

    @include bp('portrait')
      font-size: 4.2rem
      line-height: 4.8rem

    @include bp('landscape')
      font-size: 5rem
      line-height: 5.6rem

    @include bp('large')
      font-size: 7.2rem
      line-height: 8.2rem

  &__subtext
    color: $color-white
    font-size: 2.2rem
    line-height: 2.8rem
    margin-top: .5em

    @include bp('portrait')
      font-size: 3.4rem
      line-height: 4rem

    @include bp('landscape')
      font-size: 4rem
      line-height: 4.6rem

    @include bp('large')
      font-size: 5.4rem
      line-height: 6.6rem

  &--style-dark
    height: auto
    border: none
    background-color: $color-transparency-dark-start

    .l-site-header
      position: relative

    .header

      &__nav
        background: inherit

      &__img-ratio
        padding-bottom: 0
        height: auto

      &__overlay
        position: relative

